Problem-10/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    server: web
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
        server: web
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: default
          mountPath: "/etc/nginx/conf.d"
          readOnly: true
      volumes:
      - name: default
        configMap:
          name: nginx
status: {}

---
apiVersion: v1
kind: Service
metadata:
     name: nginx
spec:
     type: ClusterIP
     selector:
          app: nginx
     ports:
         - port: 8080
           targetPort: 80
